test_suite/tests/ui/identifier/not_unit.stderr
error: #[serde(other)] must be on a unit variant
 --> $DIR/not_unit.rs:8:5
  |
8 | /     #[serde(other)]
9 | |     Other(u8, u8),
  | |_________________^

error: aborting due to previous error

